bugfix(NSB-4138): fix album preview overflow upon switching grid view, adjust preview pane width and contents width

--- a/src/assets/scss/styles/components/_pages_shared_component.scss
+++ b/src/assets/scss/styles/components/_pages_shared_component.scss
@@ -232,9 +232,9 @@
 .album-preview {
 	position: absolute;
 	background: $dark;
-	width: 250px;
+	width: 100%;
 	height: 100%;
-	left: 15px;
+	left: 0px;
 	top: 0px;
 	z-index: 10;
 	box-shadow: 5px 5px 15px $gray_dark;
